discussion/kv_engine/179400/179400_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Update frequencies for all Buckets when unified caching

Change-Id: Ib4554e41206f2c9c6b5f45362c32a54277b54564

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-10-20 12:11:36.000000000
Message: 
Uploaded patch set 15.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-20 12:15:11.000000000
Message: 
Patch Set 15: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21298/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:31:5: error: cannot initialize object parameter of type "GlobalTask" with an expression of type "BucketItemFreqDecayerTask" [clang-diagnostic-error]
    snooze(INT_MAX);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:57:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(pendingIt != pending.end());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:58:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects((*pendingIt)->isUnifiedCaching());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.h:59:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<EngineSet, std::mutex> pendingFreqDecayerRuns{};
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_memory_manager.cc:26:35: error: no viable conversion from "shared_ptr<BucketItemFreqDecayerTask>" to "shared_ptr<GlobalTask>" [clang-diagnostic-error]
    ExecutorPool::get()->schedule(freqDecayerTask);
                                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:149:7: note: candidate constructor not viable: no known conversion from "std::shared_ptr<BucketItemFreqDecayerTask>" to "const std::shared_ptr<GlobalTask> &" for 1st argument
      shared_ptr(const shared_ptr&) noexcept = default; ///< Copy constructor
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:303:7: note: candidate constructor not viable: no known conversion from "std::shared_ptr<BucketItemFreqDecayerTask>" to "std::shared_ptr<GlobalTask> &&" for 1st argument
      shared_ptr(shared_ptr&& __r) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:356:17: note: candidate constructor not viable: no known conversion from "std::shared_ptr<BucketItemFreqDecayerTask>" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      constexpr shared_ptr(nullptr_t) noexcept : shared_ptr() { }
                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:295:2: note: candidate template ignored: requirement "is_constructible<std::__shared_ptr<GlobalTask, __gnu_cxx::_S_atomic>, const std::shared_ptr<BucketItemFreqDecayerTask> &>::value" was not satisfied [with _Yp = BucketItemFreqDecayerTask]
        shared_ptr(const shared_ptr<_Yp>& __r) noexcept
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:312:2: note: candidate template ignored: requirement "is_constructible<std::__shared_ptr<GlobalTask, __gnu_cxx::_S_atomic>, std::shared_ptr<BucketItemFreqDecayerTask> >::value" was not satisfied [with _Yp = BucketItemFreqDecayerTask]
        shared_ptr(shared_ptr<_Yp>&& __r) noexcept
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:331:2: note: candidate template ignored: could not match "auto_ptr" against "shared_ptr"
        shared_ptr(auto_ptr<_Yp>&& __r);
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:339:2: note: candidate template ignored: could not match "unique_ptr" against "shared_ptr"
        shared_ptr(unique_ptr<_Yp, _Del>&& __r)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:407:2: note: candidate template ignored: could not match "_Sp_alloc_shared_tag" against "shared_ptr"
        shared_ptr(_Sp_alloc_shared_tag<_Alloc> __tag, _Args&&... __args)
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/executorpool.h:131:36: note: passing argument to parameter "task" here
    virtual size_t schedule(ExTask task) = 0;
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/unified_caching_test.cc:64:13: error: unknown type name "BinprotGetCommand"; did you mean "BinprotCommand"? [clang-diagnostic-error]
            BinprotGetCommand command{key, vbid};
            ^~~~~~~~~~~~~~~~~
            BinprotCommand
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_connection.h:142:7: note: "BinprotCommand" declared here
class BinprotCommand;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/unified_caching_test.cc:64:31: error: variable has incomplete type "BinprotCommand" [clang-diagnostic-error]
            BinprotGetCommand command{key, vbid};
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_connection.h:142:7: note: forward declaration of "BinprotCommand"
class BinprotCommand;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/unified_caching_test.cc:68:29: error: variable has incomplete type "BinprotResponse" [clang-diagnostic-error]
            BinprotResponse response;
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_connection.h:141:7: note: forward declaration of "BinprotResponse"
class BinprotResponse;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21298/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:31:5:
error: cannot initialize object parameter of type "GlobalTask" with an expression of type "BucketItemFreqDecayerTask" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21298/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20552/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
